# ros_msft_onnx

./: .gitignore  README.md  azure-pipelines.yml  onnx.repos  onnx_windows.repos
.github/: ci.repos
.github/workflows/: GitHub2ADO.yml  ci-win.yaml  ci.yaml  pub.yaml
ci/: environment.yaml  toolchain.cmake
object_tracker/: CMakeLists.txt  package.xml
object_tracker/include/object_tracker/: yolo_processor.h
object_tracker/launch/: cam_object_tracker.launch.py
object_tracker/src/: main.cpp  yolo_processor.cpp
onnx/: CMakeLists.txt  README.md  package.xml
onnx/data/: README.md
onnx/include/onnx/: onnx_tracker.h  pose_processor.h  yolo_processor.h
onnx/include/onnx_object_detection/: onnx_tracker.h  pose_processor.h  yolo_processor.h
onnx/launch/: object_detection.launch.py  pose.launch.py  tracker.launch.py
onnx/rviz/: default_view.rviz
onnx/src/: main.cpp  onnx_tracker.cpp  pose_processor.cpp  yolo_processor.cpp
onnx_msgs/: CMakeLists.txt  package.xml
onnx_msgs/msg/: DetectedObjectPose.msg
onnx_object_detection/: CMakeLists.txt  README.md  package.xml
onnx_object_detection/include/onnx_object_detection/: yolo_processor.h
onnx_object_detection/launch/: object_detection.launch.py
onnx_object_detection/rviz/: default_view.rviz
onnx_object_detection/src/: main.cpp  yolo_processor.cpp
onnxruntime_vendor/: CMakeLists.txt  package.xml
onnxruntime_vendor/cmake/: onnxruntime_vendor-extras.cmake
onnxruntime_vendor/src/: onnxruntime_vendor-extras.cmake
package/: OnnxRos.nuspec  WinML.nuspec  build.bat
package/tools/: setup.bat
ros_msft_onnx/: CMakeLists.txt  package.xml
ros_msft_onnx/cfg/: anchors.yaml  reconfig.cfg
ros_msft_onnx/include/ros_msft_onnx/: pose_parser.h  ros_msft_onnx.h  yolo_box.h
ros_msft_onnx/launch/: pose.launch  tracker.launch
ros_msft_onnx/src/: main.cpp  packages.cpu.config  packages.gpu.config  pose_parser.cpp  ros_msft_onnx.cpp  yolo_box.cpp
ros_msft_onnx/test/: testtracker.cpp  testtracker.launch
ros_msft_onnx_msgs/: CMakeLists.txt  package.xml
ros_msft_onnx_msgs/msg/: DetectedObjectPose.msg
winml/: CMakeLists.txt  package.xml
winml/include/winml_tracker/: pose_parser.h  winml_tracker.h  yolo_box.h
winml/launch/: pose.launch  tracker.launch
winml/src/: main.cpp  pose_parser.cpp  winml_tracker.cpp  yolo_box.cpp
winml/test/: testtracker.cpp  testtracker.launch
winml_msgs/: CMakeLists.txt  package.xml
