<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>onnxruntime_vendor</name>
  <version>0.0.1</version>
  <description>
    Wrapper for onnxruntime.
  </description>
  <maintainer email="seanyen@microsoft.com">Sean Yen</maintainer>
  <license>MIT</license>

  <url type="website">https://microsoft.github.io/onnxruntime/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>