<?xml version="1.0"?>
<package format="2">
  <name>ros_msft_onnx_msgs</name>
  <version>1.0.0</version>
  <description>The ros_msft_onnx_msgs package</description>
  
  <maintainer email="lamadio@microsoft.com">Lou Amadio</maintainer>
  
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
